# tender-market-analytics

./: .gitignore  Market_survey.xlsx  README.md  app.py  benchmark_res.csv  db_cleaning_map.py  db_init.py  error.py  get_summary.py  llm.py  model_benchmark.ipynb  price_rec.py  prob_modeling.py  products.db  pyproject.toml  query_logic.py  requirements.txt  test.xlsx  tooltips.py
