[project]
name = "Tender_Market_Analytics"
version = "0.0"
description = "Streamlit search visualization demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "streamlit>=1.50",
  "altair>=6",
  "pandas>=2",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
