[project]
name = "Tender_Market_Analytics"
version = "0.0"
description = "Streamlit search visualization demo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=6",
    "lark>=1.3",
    "lightgbm>=4.5,
    "numpy>=2.4",
    "pandas>=2",
    "scikit-learn>=1.7",
    "skpro>=2.12",
    "stqdm",
    "streamlit>=1.50",
    "tqdm>=4",
    "xgboost>=3"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
